// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InOrNotIn /> render 1`] = `
<div
  style="height: 330px;"
>
  <div
    class="gio-input gio-input--middle"
  >
    <input
      class="gio-input__content"
      placeholder="请输入…"
      type="text"
      value=""
    />
  </div>
  <div
    style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;"
  >
    <div
      class="gio-loading gio-loading-large"
    >
      <span
        class="gio-loading-strip"
      >
        <span
          class="gio-loading-strip-item"
        />
        <span
          class="gio-loading-strip-item"
        />
        <span
          class="gio-loading-strip-item"
        />
        <span
          class="gio-loading-strip-item"
        />
      </span>
      <span
        class="gio-loading-title gio-loading-title-bottom"
      >
        加载中...
      </span>
    </div>
  </div>
</div>
`;

exports[`<InOrNotIn /> should be can input. 1`] = `
<div
  style="height: 330px;"
>
  <div
    class="gio-input gio-input--middle"
  >
    <input
      class="gio-input__content"
      placeholder="请输入…"
      type="text"
      value="t,"
    />
  </div>
  <div
    style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;"
  >
    <div
      class="gio-loading gio-loading-large"
    >
      <span
        class="gio-loading-strip"
      >
        <span
          class="gio-loading-strip-item"
        />
        <span
          class="gio-loading-strip-item"
        />
        <span
          class="gio-loading-strip-item"
        />
        <span
          class="gio-loading-strip-item"
        />
      </span>
      <span
        class="gio-loading-title gio-loading-title-bottom"
      >
        加载中...
      </span>
    </div>
  </div>
</div>
`;
